--- a/update.html
+++ b/update.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Update</title>
 </head>
-<body>
-    <h1>Update</h1>
-    <div style="background-color: rgb(113, 67, 113); display: flex; flex-direction: row; align-items: center;">
-        <img src="books.jpg" alt="Book" style="width: 200px; height: 300px; margin: 20px;">
-    <form action="update.php" method="post" style="margin: 20px;">
+
+<body style="background-color: rgb(134, 11, 139);">
+    
+    <h1 style="text-align: center; background-color:red;">Update</h1>
+    <div style="background-color: rgb(134, 11, 139); display: flex; flex-direction: column; align-items: center;">
+        <img src="books.jpg" alt="Book" style="width: 200px; height: 300px; ">
+    <form action="Update.php" method="post"  >
+        <div class="form-group">
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required><br><br>
+        <input type="text" class="form-control" placeholder="Enter Tittle " id="title" name="title" required>
+    </div>
+    <div class="form-group">
         <label for="author">Author:</label>
-        <input type="text" id="author" name="author" required><br><br>
+        <input type="text" class="form-control" id="author" placeholder="Enter Author " name="author" required>
+    </div>
+    <div class="form-group">
         <label for="price">Price:</label>
-        <input type="text" id="price" name="price" required><br><br>
+        <input type="text" class="form-control" id="price" placeholder="Enter Price " name="price" required>
+    </div>
+    <div class="form-group">
         <label for="availability">Availability:</label>
-        <select id="availability" name="availability">
+        <select id="availability" name="availability" class="form-control">
             <option value="Availible">Availible</option>
             <option value=" Not Availible">Not Availible</option>
         </select>
-        <br><br>
-        <input type="submit" value="Submit">
+       
+    </div>
+        <input type="submit" value="Update" class="btn btn-info">
     </form>
-</div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+
 </html>
