--- a/search.html
+++ b/search.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Index</title>
+    <title>Search</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body style="background-color: rgb(134, 11, 139);">
-    
-    <h1 style="text-align: center; background-color:red;">Index</h1>
+    <h1 style="text-align: center; background-color:red;">Search</h1>
     <div style="background-color: rgb(134, 11, 139); display: flex; flex-direction: column; align-items: center;">
-        <img src="books.jpg" alt="Book" style="width: 200px; height: 300px; ">
-        <br>
-    <button type="button" class="btn btn-success" onclick="window.location.href='home.php'">Home</button><br>
-    <button type="button" class="btn btn-warning" onclick="window.location.href='insert.html'">Insert</button><br>
-    <button type="button" class="btn btn-danger" onclick="window.location.href='delete.html'">Delete</button><br>
-    <button type="button" class="btn btn-info" onclick="window.location.href='update.html'">Update</button><br>
-    <button type="button" class="btn btn-dark" onclick="window.location.href='search.html'">Search</button></br>
+        <img src="books.jpg" alt="Book" style="width: 200px; height: 300px;">
+    <form action="search.php" method="post" style="margin: 20px;">
+        <div class="form-group">
+            <label for="title">Title:</label>
+            <input type="text" class="form-control" placeholder="Enter Tittle " id="title" name="title" required>
+        </div>
+        <input type="submit" value="Search" class="btn btn-danger">
+    </form>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
